Moving to Iron Router, currently broken, going to fix

--- a/addHero/addHero.html
+++ b/addHero/addHero.html
@@ -1,5 +1,7 @@
-<template name="newhero">
-	<div class="sidebar">
+<template name="AddHero">
+	{{> nav}}
+	<div class="container">
+		<h1>Add Hero</h1>
 		<div>
 			<form name="new-hero" id="new-hero">
 				<input name="name" id="name" placeholder="Enter Name"/><br>
