Done except small error with forms, submitting to url aswell

--- a/templates.html
+++ b/templates.html
@@ -48,7 +48,7 @@
         <label for='universe'>Universe:</label>
         <input name="universe" id="universe" class="form-control" placeholder="Enter Universe"/>
       </div>
-        <input type="submit" value="Submit" class="btn btn-default">
+      <button type="submit" >Submit</button>
 
     </form>
   </div>
