Fixed all bugs, first version finally finished

--- a/templates.html
+++ b/templates.html
@@ -48,7 +48,7 @@
         <label for='universe'>Universe:</label>
         <input name="universe" id="universe" class="form-control" placeholder="Enter Universe"/>
       </div>
-      <button type="submit" >Submit</button>
+      <button type="submit" class="btn btn-default">Submit</button>
 
     </form>
   </div>
