--- a/templates.html
+++ b/templates.html
@@ -63,13 +63,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">SSE</a>
+            <a class="navbar-brand" href="/">SSE</a>
         </div>
         <center>
             <div class="navbar-collapse collapse" id="navbar-main">
                 <ul class="nav navbar-nav">
-                    <li><a href="/">Home</a>
-                    </li>
                     <li><a href="/heroes">Heroes</a>
                     </li>
                     {{#if currentUser}}<li><a href="/addheroes">AddHero</a>
