Changed table slightly

--- a/templates.html
+++ b/templates.html
@@ -87,7 +87,7 @@
 </template>
 
 <template name="hero">
-  <table class="table table-condensed pull-right">
+  <table class="table table-condensed table-hover pull-right">
         <tr><th>Name</th><th>Alias</th><th>Main Power</th><th>Alignment</th><th>Universe</th>{{#if currentUser}}<th>Delete</th>{{/if}}</tr>
         {{#each heroes}}
       <tr>
