--- a/templates.html
+++ b/templates.html
@@ -45,7 +45,11 @@
       </div>
       <div class='form-group'>
         <label for='alignment'>Alignment:</label>
-        <input name="alignment" id="alignment" class="form-control" placeholder="Enter Alignment"/>
+        <select class="form-control" id="alignment" name="alignment">
+          <option>Good</option>
+          <option>Neutral</option>
+          <option>Bad</option>
+        </select>
       </div>
       <div class='form-group'>
         <label for='universe'>Universe:</label>
